Design: removed unnecessary paddings from Dashboard, UserManagement, SNB z-index is now 1000, menu icon's place adjusted in small viewport; Fixed: import bug

--- a/src/components/SNB/snb.module.scss
+++ b/src/components/SNB/snb.module.scss
@@ -4,7 +4,7 @@
 .snb {
   position: absolute;
   left: -284px;
-  z-index: 1;
+  z-index: 1000;
   width: 284px;
   height: 100%;
   padding: 24px;
@@ -24,7 +24,7 @@
 
   .menuIcon {
     position: absolute;
-    top: 26px;
+    top: 1.625rem;
     right: -60px;
     width: 36px;
     height: 36px;
