--- a/src/pages/UserManagement/userManagement.module.scss
+++ b/src/pages/UserManagement/userManagement.module.scss
@@ -1,16 +1,11 @@
-@use 'styles/constants/colors';
-@use 'styles/constants/dimensions';
-@use 'styles/mixins/responsive';
+@use 'src/styles/constants/colors';
+@use 'src/styles/constants/dimensions';
+@use 'src/styles/mixins/responsive';
 
 .managementWrapper {
   box-sizing: border-box;
   max-width: dimensions.$max-width;
-  padding: 1.25rem 5%;
   background: colors.$main-bg;
-
-  @include responsive.after('xlg') {
-    padding: 1.25rem 2%;
-  }
 
   .managementTitle {
     padding: 1.25rem 0;
